Fix flickering when css-modal gets resized

--- a/source/css/_modal.scss
+++ b/source/css/_modal.scss
@@ -1,3 +1,7 @@
+.modal--show .modal-inner {
+  -webkit-transition: none !important;
+  transition: none !important;
+}
 .modal--centered {
 
   .dismiss-button { display: none; }
